加上header(自介+測試圖片)
好醜哈哈哈

--- a/index.html
+++ b/index.html
@@ -1,2 +1,42 @@
-<>
-HAHAHA
+<!DOCTYPE html>
+<html>
+<head>
+  <title>徐士林Julie 履歷</title>
+  <style>
+    *{
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      letter-spacing: .05em;
+    }
+
+/*字體*/
+    body{
+      font-family: "source-han-sans-traditional", sans-serif, "微軟正黑體";
+    }
+
+/*圖片設定*/
+    img {
+      max-width: 100%;
+      display: block;
+    }
+    header{background-color: rgba(157, 253, 225, 0.81)}
+
+    
+  </style>
+</head>
+
+<!-- 終於到網站本體啦 -->
+<body>
+  <!-- 第1部分: 圖片+大名 -->
+  <header>
+    <p>(未完成)歡迎來到我的網站，我是</p> 
+       <h1>徐士林Julie Hsu</h1>
+       <img src="images/index1.jpg" alt="測試圖片">   
+  </header>
+
+
+
+
+</body>
+</html>
