--- a/index.html
+++ b/index.html
@@ -20,8 +20,23 @@
       max-width: 100%;
       display: block;
     }
-    header{background-color: rgba(157, 253, 225, 0.81)}
+/*header設定*/
+    header{
+      box-sizing: border-box;
+      color: black;
+      background: rgba(157, 253, 225, 0.81) url("images/me.jpg") center no-repeat;
+      background-size: cover;
+      padding: 30px 20px;
+      height: 100vw;
 
+      font-size:.8em;
+    }
+
+    h1{
+      font-size: 1.2em;
+      margin-left: 20px;
+      margin-top: 6px;
+    }
     
   </style>
 </head>
@@ -29,10 +44,9 @@
 <!-- 終於到網站本體啦 -->
 <body>
   <!-- 第1部分: 圖片+大名 -->
-  <header>
-    <p>(未完成)歡迎來到我的網站，我是</p> 
+  <header>    
+    <p>(未完成)歡迎來到我的網站，我是</p>
        <h1>徐士林Julie Hsu</h1>
-       <img src="images/index1.jpg" alt="測試圖片">   
   </header>
 
 
