--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>徐士林Julie 履歷</title>
   <style>
+    /*全*/
     *{
       margin: 0;
       padding: 0;
@@ -10,7 +11,6 @@
       letter-spacing: .05em;
     }
 
-/*字體*/
     body{
       font-family: "source-han-sans-traditional", sans-serif, "微軟正黑體";
     }
@@ -20,6 +20,7 @@
       max-width: 100%;
       display: block;
     }
+
 /*header設定*/
     header{
       box-sizing: border-box;
@@ -42,11 +43,13 @@
 </head>
 
 <!-- 終於到網站本體啦 -->
+<!-- 終於到網站本體啦 -->
+<!-- 終於到網站本體啦 -->
 <body>
   <!-- 第1部分: 圖片+大名 -->
   <header>    
     <p>(未完成)歡迎來到我的網站，我是</p>
-       <h1>徐士林Julie Hsu</h1>
+    <h1>徐士林Julie Hsu</h1>
   </header>
 
 
