--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>徐士林Julie 履歷</title>
   <style>
     /*全*/
@@ -38,7 +40,20 @@
       margin-left: 20px;
       margin-top: 6px;
     }
-    
+
+    p{
+      color: black;
+    }
+    .intro{
+      background-color: black;
+      color: white;
+    }
+
+    footer{
+      background-color: blue; 
+      color: white;
+    }
+
   </style>
 </head>
 
@@ -52,7 +67,9 @@
     <h1>徐士林Julie Hsu</h1>
   </header>
 
+  <p class="intro">今年23歲，不知道要打甚麼所以先這樣XD</p>
 
+  <footer>Contact me!</footer>
 
 
 </body>
