new pic complete discrbition

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     header{
       box-sizing: border-box;
       
-      background: rgba(157, 253, 225, 0.81) url("images/封面圖片.jpg") center top -12vw no-repeat;
+      background: rgba(157, 253, 225, 0.81) url("images/index.jpg") center top -12vw no-repeat;
       background-size: 100%;
       padding: 2em;
       height: 48vw;
@@ -82,7 +82,7 @@
   <div class="intro">
     <h2>About me</h2>
     <p>今年23歲，對事物都充滿好奇心的雙子座:)</p>
-    <p>學生期間積極參與各式活動，比起英雄主義，更喜歡Teamwork中與夥伴一同完成任務的成就感，認為「企劃」本身含有豐富的知識和經驗價值生涯規劃以企劃、顧問為主要的努力方向。</p>
+    <p>學生期間積極參與各式活動，比起英雄主義，更喜歡Teamwork中與夥伴一同完成任務的成就感，認為「企劃」本身含有豐富的知識和經驗價值，以「營運顧問」為職涯發展方向。</p>
     <p>常喜歡看漫畫、休閒讀物、打手遊，平常也與朋友玩密室逃脫、桌遊，希望未來有機會一個人遊台灣~</p>
   </div>
 
@@ -98,7 +98,7 @@
           <div>
             <h4>研究員</h4>
             <div>2016.07 - 2017.07</div>
-            <div>○○管理顧問</div>
+            <div>京華管理顧問</div>
           </div>
           <ul>
             <li>協助客戶撰寫政府補助案的計畫書、與審議過程輔導</li>
@@ -118,7 +118,7 @@
         <li>
           <div>
             <h4>公關</h4>
-            <div>○○雜誌</div>
+            <div>《除了》雜誌</div>
             <div>2016.01 - 2016.04</div>
           </div>
           <ul>
@@ -131,7 +131,7 @@
         <li>
           <div>
             <h4>PM</h4>
-            <div>○○○○資訊公司</div>
+            <div>丞希綠色資訊公司</div>
             <div>2015.12 – 2016.03</div>
           </div>
           <ul>
