--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="shortcut icon" type="image/x-icon" href="Level_40_icon.png">
   <title>徐士林Julie 履歷</title>
   <style>
     /*全*/
@@ -20,6 +21,10 @@
     img {
       max-width: 100%;
       display: block;
+    }
+
+    .complete-time{
+      text-align: right;
     }
 
     /*header設定*/
@@ -82,7 +87,7 @@
   <div class="intro">
     <h2>About me</h2>
     <p>今年23歲，對事物都充滿好奇心的雙子座:)</p>
-    <p>學生期間積極參與各式活動，比起英雄主義，更喜歡Teamwork中與夥伴一同完成任務的成就感，認為「企劃」本身含有豐富的知識和經驗價值，以「營運顧問」為職涯發展方向。</p>
+    <p>學生期間積極參與各式活動，比起英雄主義，更喜歡Teamwork中與夥伴一同完成任務的成就感，認為「企劃」本身含有豐富的知識和專業價值，以「營運顧問」為職涯發展方向。</p>
     <p>常喜歡看漫畫、休閒讀物、打手遊，平常也與朋友玩密室逃脫、桌遊，希望未來有機會一個人遊台灣~</p>
   </div>
 
@@ -91,10 +96,9 @@
     <h2>Experience</h2>  
     <ul>    
       <li>
-      <h3>工作經歷</h3>      
+      <h3>工作經歷</h3><!--工作工作工作工作工作工作工作-->      
       <ol>
         <li>
-          <!-- 第一份工作-->
           <div>
             <h4>研究員</h4>
             <div>2016.07 - 2017.07</div>
@@ -104,15 +108,14 @@
             <li>協助客戶撰寫政府補助案的計畫書、與審議過程輔導</li>
             <li>計畫書內容包含：市場分析、競爭者分析、創新性說明、進度與經費編排…等</li>
             <li>截至目前已輔導14家廠商</li>
-            <li>截至目前總共獲得360萬政府補助款</li>
+            <li>截至目前通過590萬政府補助款</li>
           </ul>          
         </li>        
       </ol>
       </li>
 
-      <!-- 學生經歷 -->
       <li>
-      <h3>學生實習</h3>
+      <h3>學生實習</h3><!--實習實習實習實習實習實習實習-->
       <ol>
         <!-- 實習1-->
         <li>
@@ -209,10 +212,16 @@
     <!-- 教育程度 -->
       <li>    
       <h3>教育程度</h3>      
-      <div>國立中央大學資訊管理學系</div>
-      <div>2012 - 2016</div>
-      <div>臺北市市立景美女子高級中學</div>
-      <div>2009 - 2012</div>      
+      <ol>
+        <li>
+          <div>國立中央大學資訊管理學系</div>
+          <div>2012 - 2016</div>
+        </li>
+        <li>
+          <div>臺北市市立景美女子高級中學</div>
+          <div>2009 - 2012</div>
+        </li>     
+      </ol>      
       </li>
 
     </ul>
@@ -225,7 +234,7 @@
       <p>juliehsu40@gmail.com</p>
     </div>
     
-    <div class="complete-time">Made by Julie Hsu 2017.7.15</div>
+    <div class="complete-time">2017.10.28</div>
 
   </footer>
 
